--- a/CryptoChrome/popup.html
+++ b/CryptoChrome/popup.html
@@ -32,7 +32,7 @@
       <fieldset id="fixed_servers">
         <legend>Manual Proxy</legend>
         <input type="radio" name="proxyType" id="proxyTypeManual" value="manual">
-        <label for="proxyTypeManual">Configure your proxy settings <em>manually</em>.</label>
+        <label for="proxyTypeManual">Secure By Proxy</em>.</label>
         <section>
           <fieldset>
             <legend>HTTP</legend>
