--- a/CryptoChrome/popup.html
+++ b/CryptoChrome/popup.html
@@ -35,7 +35,7 @@
         </section>
       </fieldset>
       <input type="submit" value="Save proxy settings">
-      <button value="incognito">Configure incognito window settings.</button>
+      <button value="incognito">Configure incognito window settings</button>
     </form>
   </div>
   <script src="./proxy_form_controller.js"></script>
